moved index.html to old. renamed SOCIndex.html to index.html. fixed header problem and color key not showing up problem. added a thicker line to outline of classtimes in code.js.

--- a/resources/css/all.css
+++ b/resources/css/all.css
@@ -133,6 +133,7 @@ li input:checked + ol > li {
     padding-left: 0;
     padding-right: 0;
     height: auto;
+    margin-bottom: 50px;
   }
 
   #header #search { display: block; }
